logs/knesset-data.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/cached_property-1.3.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/hebrew_numbers'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/knesset_data'...
Listing './lib/python3.5/site-packages/knesset_data/dataservice'...
Listing './lib/python3.5/site-packages/knesset_data/dataservice/monitor'...
Listing './lib/python3.5/site-packages/knesset_data/dataservice/monitor/metadata'...
Listing './lib/python3.5/site-packages/knesset_data/dataservice/tests'...
Listing './lib/python3.5/site-packages/knesset_data/dataservice/tests/base'...
Listing './lib/python3.5/site-packages/knesset_data/dataservice/tests/bills'...
Listing './lib/python3.5/site-packages/knesset_data/dataservice/tests/committees'...
Listing './lib/python3.5/site-packages/knesset_data/dataservice/tests/laws'...
Listing './lib/python3.5/site-packages/knesset_data/dataservice/tests/votes'...
Listing './lib/python3.5/site-packages/knesset_data/html_scrapers'...
Listing './lib/python3.5/site-packages/knesset_data/html_scrapers/tests'...
Listing './lib/python3.5/site-packages/knesset_data/non_knesset_data'...
Listing './lib/python3.5/site-packages/knesset_data/non_knesset_data/tests'...
Listing './lib/python3.5/site-packages/knesset_data/protocols'...
Listing './lib/python3.5/site-packages/knesset_data/protocols/tests'...
Listing './lib/python3.5/site-packages/knesset_data/utils'...
Listing './lib/python3.5/site-packages/knesset_data-2.0.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyslet'...
Listing './lib/python3.5/site-packages/pyslet/http'...
Listing './lib/python3.5/site-packages/pyslet/odata2'...
Listing './lib/python3.5/site-packages/pyslet/qtiv1'...
Listing './lib/python3.5/site-packages/pyslet/qtiv2'...
Listing './lib/python3.5/site-packages/pyslet/xml'...
Listing './lib/python3.5/site-packages/pyslet-0.7.20170805.egg-info'...
Listing './lib/python3.5/site-packages/pyth'...
Listing './lib/python3.5/site-packages/pyth/encodings'...
Listing './lib/python3.5/site-packages/pyth/plugins'...
Listing './lib/python3.5/site-packages/pyth/plugins/latex'...
Listing './lib/python3.5/site-packages/pyth/plugins/pdf'...
Listing './lib/python3.5/site-packages/pyth/plugins/plaintext'...
Listing './lib/python3.5/site-packages/pyth/plugins/python'...
Listing './lib/python3.5/site-packages/pyth/plugins/rst'...
Compiling './lib/python3.5/site-packages/pyth/plugins/rst/writer.py'...
***   File "./lib/python3.5/site-packages/pyth/plugins/rst/writer.py", line 52
    return ur"\ :sub:`%s`\ " % ret
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyth/plugins/rtf15'...
Compiling './lib/python3.5/site-packages/pyth/plugins/rtf15/reader.py'...
***   File "./lib/python3.5/site-packages/pyth/plugins/rtf15/reader.py", line 653
    match = re.match(ur'HYPERLINK "(.*)"', destination)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyth/plugins/rtf15/writer.py'...
***   File "./lib/python3.5/site-packages/pyth/plugins/rtf15/writer.py", line 237
    self.target.write('{\up9 ')
                     ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 1-2: truncated \uXXXX escape

Listing './lib/python3.5/site-packages/pyth/plugins/xhtml'...
Listing './lib/python3.5/site-packages/pyth-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/python_hebrew_numbers-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
